<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_results"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="itay.finci.org.periodictable.ResultsFragment"
    tools:showIn="@layout/activity_results">


    <Button
        android:text="@string/goback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/btBack"
        android:textAllCaps="false" />

    <TextView
        android:text="@string/headLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="69dp"
        android:id="@+id/tvHeadLine"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="36sp" />

    <TextView
        android:text="@string/seccondtry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/tvInSecondTry"
        android:textSize="24sp" />

    <TextView
        android:text="@string/dontseccede"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:id="@+id/tvDontSeccede"
        android:layout_below="@+id/tvInSecondTry"
        android:layout_centerHorizontal="true"
        android:textSize="24sp" />

    <TextView
        android:text="@string/inFirsttime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvInFirstTry"
        android:layout_above="@+id/tvInSecondTry"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="38dp"
        android:textSize="24sp" />
</RelativeLayout>
