<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="itay.finci.org.periodictable.MainScreenFragment"
    tools:showIn="@layout/activity_main_screen">

    <Button
        android:text="@string/play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="65dp"
        android:id="@+id/btPlay"
        android:textAllCaps="false" />

    <Button
        android:text="@string/setNew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="85dp"
        android:id="@+id/btSetNew"
        android:elevation="0dp"
        android:layout_below="@+id/btPlay"
        android:layout_centerHorizontal="true"
        android:visibility="invisible" />

    <Button
        android:text="@string/credit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="91dp"
        android:id="@+id/btCredit"
        android:layout_below="@+id/btSetNew"
        android:layout_centerHorizontal="true"
        android:textAllCaps="false" />
</RelativeLayout>
